sign up bottom sheet created

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   #db
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
+  cloud_firestore: ^4.7.1
+  
+  
 
 
   # The following adds the Cupertino Icons font to your application.
